# Browser-db

./: .gitignore  API_REFERENCE.md  Cargo.toml  Contribution.md  DEVELOPER_GUIDE.md  DOCS_ANALYSIS.md  FILE_STRUCTURE.md  LICENSE  QUICK_START.md  README.md  USER_MANUAL.md  browserdb.toml  fix.patch
.github/workflows/: ci.yml
bindings/: Cargo.toml  PLAN-double-buffered-memtable.md  TODO-IF.md  build.rs  test_out.txt
bindings/benches/: api_benches.rs  benchmark.rs  comparison_benches.rs  core_benches.rs  optimization_benches.rs
bindings/examples/: sql_demo.rs  sql_perf_test.rs  stress_test.rs
bindings/src/: ffi.rs  lib.rs  operations.rs  types.rs
bindings/src/core/: blob_log.rs  config.rs  format.rs  heatmap.rs  lsm_tree.rs  mod.rs  modes.rs  wal.rs
bindings/src/sql/: mod.rs
bindings/tests/: advanced_features_test.rs  atomicity_test.rs  batch_tests.rs  blob_separation_test.rs  block_checksum_test.rs  compaction_cascade_test.rs  encryption_tests.rs  ffi_test.rs  hot_search_test.rs  index_logic_test.rs  integration_tests.rs  merge_stream_test.rs  migration_tests.rs  multi_process_lock_test.rs  sstable_format_test.rs  streaming_test.rs  temp_blob_gc_test.rs  ultra_ttl_test.rs  wal_crash_test.rs  wal_tests.rs
core/: build.zig
core/src/: main.zig
core/src/backup/: backup_counting_implementation.zig
core/src/core/: bdb_format.zig  browserdb.zig  heatmap_indexing.zig  lsm_tree.zig  modes_operations.zig
core/src/sstable/: sstable_counting_implementation.zig
core/tests/: bdb_format_tests.zig  bdb_format_validation_tests.zig  bench.zig  compression_tests.zig  compression_validation_test.zig  heatmap_indexing_tests.zig  lsm_tree_tests.zig  main.zig  modes_operations_tests.zig  performance_benchmarks.zig  simple_compression_test.zig  test_runner.sh
core/tests/sstable/: test_sstable_counting.zig
examples/: basic_usage.rs
scripts/: build.sh
